# KoMbine

./: .gitignore  .pylintrc  NOTICE.txt  PVALUE_IMPLEMENTATION.md  README.md  XMAX_USAGE.md  article.tex  compare_collapse_consecutive_deaths.py  delta_functions.py  discrete.py  pyproject.toml  roc_auc.py  setup.py  test.py  test_delta_functions.py  test_discrete.py  test_patient_wise_final.py  test_roc_auc.py
.github/: copilot-instructions.md
.github/workflows/: checklog.py  ci-cd.yml  latex.yml  linting.yml  test_and_docs.yml  test_kombine.yml  test_roc_picker.yml
docs/: .gitignore  01_table_of_contents.md  02_rocpicker.bib  02_rocpicker.tex  03_examples.md  04_small_perturbation.md  05_lung_example.md  06_kaplan_meier_example.md  07_compare_to_lifelines.md  08_kaplan_meier_paper.bib  08_kaplan_meier_paper.tex  compare_collapse_consecutive_deaths.py  compare_p_value.py  compile_plots.sh  examples.md  lung_example.md  rocpicker.bib  rocpicker.tex  small_perturbation.md
docs/kombine/: .chktexrc  01_table_of_contents.md  02_kaplan_meier_example.md  02_kaplan_meier_paper.bib  02_kaplan_meier_paper.tex  02_kombine.tex  03_compare_to_lifelines.md  03_kaplan_meier_example.md  04_compare_to_lifelines.md  05_command_line_interface.md  08_kaplan_meier_paper.bib  08_kaplan_meier_paper.tex  compare_collapse_consecutive_deaths.py  compare_p_value.py  compile_km_plots.sh
docs/roc_picker/: 01_table_of_contents.md  02_rocpicker.tex  03_examples.md  04_small_perturbation.md  05_lung_example.md  compile_roc_plots.sh
docs/supplement/02/: roc_lagrangian.nb
kombine/: command_line_interface.py  datacard.py  kaplan_meier.py  kaplan_meier_likelihood.py
roc_picker/: command_line_interface.py  continuous_distributions.py  datacard.py  datacard_old.py  delta_functions.py  discrete.py  discrete_base.py  discrete_optimization.py  kaplan_meier.py  kaplan_meier_ILP.py  kaplan_meier_MINLP.py  kaplan_meier_likelihood.py  kaplan_meier_p_value_MINLP.py  systematics_mc.py  utilities.py
test/: test_continuous_distributions.py  test_delta_functions.py  test_discrete.py  test_discrete_optimization.py  test_km_likelihood.py  test_km_p_value_patient_wise.py  test_km_systematics_mc.py  test_roc_auc.py  test_systematics_mc.py  utility_testing_functions.py
test/datacards/: datacard_cells.txt  datacard_cells_binomial.txt  datacard_cells_no_poisson_uncertainty.txt  datacard_cells_no_systematics.txt  datacard_example_1.txt  datacard_neighborhoods.txt  datacard_neighborhoods_no_poisson_uncertainty.txt  datacard_neighborhoods_no_systematics.txt
test/datacards/lung/: datacard_cells.txt  datacard_cells_binomial.txt  datacard_cells_poisson.txt  datacard_donuts_RFS.txt  datacard_neighborhoods_systematics.txt
test/datacards/simple_examples/: datacard_example_2.txt  datacard_example_3.txt  datacard_example_4.txt  datacard_example_5.txt  example_roc.txt  (+9 more)
test/kombine/: test_cli_documentation.py  test_discrete_optimization.py  test_documentation.py  test_km_likelihood.py  test_km_plotting.py  test_xmax.py  test_xmax_edge_cases.py
test/reference/: discrete.pkl  km_likelihood.json  km_likelihood.pkl  km_likelihood_collapse_false.json  km_likelihood_with_censoring.json  km_likelihood_with_censoring.pkl  km_systematics.pkl  km_systematics_mc.pkl  systematics_mc.json  systematics_mc.pkl
test/roc_picker/: test_continuous_distributions.py  test_discrete.py  test_systematics_mc.py
(+22 files in other folders)
